--- a/safran/app/views/layouts/application.html.erb
+++ b/safran/app/views/layouts/application.html.erb
@@ -7,6 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+    <div class="span-24 ">
+      
+      <div id="subheader" class="span-6 colborder">
+        <%= image_tag "ecdys.png" %>
+      </div>
+      
+    
+      <div class="span-17 last">
+        <h3 class="alt">Le moteur de recherche spécialement adapaté pour le petit outillage !</h3>
+      </div>
+    <hr />  
+    <div class="span-24 ">
 
 <%= yield %>
 
