--- a/safran/app/assets/stylesheets/articles.css.scss
+++ b/safran/app/assets/stylesheets/articles.css.scss
@@ -15,9 +15,16 @@
 	border-radius: 8px; 
 	border: thin solid #919191; 
 }
-
 .titre {
 	color: #ec3000;
+
+}
+.titre2 {
+	color: #ec3000;
+	float: left;
+  width: 70px;
+  text-align: right;
+  margin: 2px 10px;
 }
 .tags {
 	color: green;
