highlighted keyword sphinx v2

--- a/safran/app/assets/stylesheets/articles.css.scss
+++ b/safran/app/assets/stylesheets/articles.css.scss
@@ -100,5 +100,10 @@ color: #FFF8C6;
 margin: 5.36px 0; /* you may don't need this; this is to fix against my blog css */
 line-height: 9.3px; /* you may don't need this; this is to fix against my blog css */
 }
+.match {
+font-weight: bold;
+font-style: italic;
+
+}
 
 
