--- a/safran/app/views/articles/index.html.haml
+++ b/safran/app/views/articles/index.html.haml
@@ -36,7 +36,8 @@
       
   
 
-.span-12#bandeau_droit       
+.span-12#bandeau_droit  
+    
   %p
     = "#{@articles.total_entries} article(s) trouvé(s) :"
     %p
@@ -49,6 +50,8 @@
     pour voir les articles comparables
 
   %hr
+  = will_paginate @articles   
+  %p
      
   #articles
   - i = 0
